--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -4,6 +4,7 @@ dependencies = [
   "langchain-mistralai>=0.2.10",
   "langchain-ollama>=0.3.1",
   "lumaai>=1.7.3",
+  "mistralai>=1.7.0",
   "psycopg2-binary>=2.9.10",
   "python-dotenv>=1.1.0",
   "sqlalchemy>=2.0.40",
