--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -9,6 +9,7 @@ dependencies = [
   "python-dotenv>=1.1.0",
   "sqlalchemy>=2.0.40",
   "strawberry-graphql[fastapi]>=0.263.2",
+  "uvicorn>=0.34.2",
   "websockets>=15.0.1",
 ]
 description = "Add your description here"
