--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@apollo/client": "^3.13.6",
     "@mediapipe/tasks-vision": "0.10.22-rc.20250304",
+    "@vercel/analytics": "^1.5.0",
     "clsx": "^2.1.1",
     "graphql": "^16.10.0",
     "motion": "^12.6.5",
